fixing testing