@@ -18,15 +18,22 @@ dependencies {
 
     implementation 'org.apache.commons:commons-lang3:3.11'
 
-    implementation 'org.mockito:mockito-core:4.3.1'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
 }
 
 test {
     useJUnitPlatform()
-//    jvmArgs(
-//            "-XX:+EnableDynamicAgentLoading",
-//            "-Dnet.bytebuddy.experimental=true",
-//            "-Dmockito.mockmaker=proxy")
+    ignoreFailures = true
+
+    jvmArgs(
+            "-XX:+EnableDynamicAgentLoading",
+            "-Dnet.bytebuddy.experimental=true",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.util.random=ALL-UNNAMED"
+    )
+
+    finalizedBy jacocoTestReport
 }
 
 pitest {
